--- a/index.html
+++ b/index.html
@@ -432,6 +432,14 @@
                     <div class="grid gap-4" data-aos="zoom-in-up" data-aos-delay="400" data-aos-easing="ease-out-back" data-aos-duration="1000">
                            <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1752211721/as_oeto4e.jpg" alt="[Imagen de clientes felices]"></div>
                         <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1752206165/IMG-20250422-WA0025_pq3xko.jpg" alt="[Imagen de un tercer platillo]"></div>
+                  </div>
+                     <div class="grid gap-4" data-aos="zoom-in-up" data-aos-delay="500" data-aos-easing="ease-out-back" data-aos-duration="1000">
+                           <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1753169909/fadwd_fk5awt.jpg" alt="[Imagen de clientes felices]"></div>
+                        <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1753169909/awda_ct2smu.jpg" alt="[Imagen de un tercer platillo]"></div>
+                    </div>
+                     <div class="grid gap-4" data-aos="zoom-in-up" data-aos-delay="600" data-aos-easing="ease-out-back" data-aos-duration="1000">
+                           <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1753169909/sdf_u2fhrn.jpg" alt="[Imagen de clientes felices]"></div>
+                        <div class="overflow-hidden rounded-lg shadow-lg"><img class="h-auto max-w-full gallery-img" src="https://res.cloudinary.com/dcusstbid/image/upload/v1753170803/asda_g9imu8.jpg" alt="[Imagen de un tercer platillo]"></div>
                     </div>
                 </div>
             </div>
